# template

./: .env  README.md  pyproject.toml
.github/workflows/: ci.yml
src/template/: commands.py  templating.py
src/template/groovy_maven_project/: template.py
src/template/groovy_maven_project/templates/: pom.xml
src/template/groovy_project/static/: .gitignore
src/template/groovy_project/templates/: pom.xml
src/template/python_poetry_project/: template.py
src/template/python_poetry_project/static/: .gitignore
src/template/python_poetry_project/templates/: .env  pyproject.toml
src/template/python_poetry_project/templates/tests/: test_example.py
src/template/python_project/: template.py
tests/: conftest.py  test_templating.py
tests/templating/templates/: pom.xml
tests/templating/templates/.migration/: refs.json
