[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Magnus Bjuvensjö <bjuvensjo@gmail.com>"]
readme = "README.md"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.5"
jinja2 = "^3.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"    
]
pythonpath = "src"

[tool.poetry.scripts]
template-groovy-maven-project = "template.commands:groovy_maven_project"
template-python-poetry-project = "template.commands:python_poetry_project"
