[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Magnus Bjuvensjö <bjuvensjo@gmail.com>"]
readme = "README.md"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.5"
jinja2 = "^3.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"    
]
pythonpath = "src"

[tool.ruff]
target-version = "py311"
extend-exclude = ["src/template/python_poetry_project/templates"]

line-length = 160

[tool.ruff.lint]
extend-select = ["E501", "U", "I"]

[tool.poetry.scripts]
template-groovy-maven-project = "template.commands:groovy_maven_project"
template-python-poetry-project = "template.commands:python_poetry_project"