[tool.poetry]
name = "{{name}}"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"    
]
pythonpath = "src"

[tool.ruff]
target-version = "py311"
line-length = 160
extend-exclude = ["src/template/python_poetry_project/templates"]

[tool.ruff.lint]
extend-select = ["E501", "U", "I"]
